--- a/dart/ex04_1/pubspec.yaml
+++ b/dart/ex04_1/pubspec.yaml
@@ -1,4 +1,4 @@
 name: ex04_1
 description: A sample command-line application
-#dependencies:
-#  unittest: any
+dependencies:
+  'collection: ">=1.0.0 <2.0.0"': any
